=========================================================================
CHANGE LOG
=========================================================================

Changes up to 1.00b13

    * support for some Gaussian cube files (orthognal cartesian-aligned)

    * pseudoatoms

    * fixed some logging bugs (yet many more remain...)

    * fixed 'fetch' and the Remote PDB Loader plugin

Changes up to 1.00b12

    * groups

    * fixed bond setting selection processing issue

    * fixed memory leak in surface algorithm

    * fixed session file chaining bug on Windows

Changes up to 1.00b11

    * fixed stick_ball / transparency bug

Changes up to 1.00b10

    * label_digits settings

    * surface_negative_visible and _color settings

    * mesh_negative_visible and _color settings

Changes up to 1.00b09

    * ray_label_specular setting

    * mesh_skip setting

    * bug fix for label scaling

    * bug fix for ramp_new

Changes up to 1.00b07

    * fixed normal refinement glitch
 
    * fixed cartoon assignment for objects without a state 0
 
    * bug fixes for surface representation

Changes up to 1.00b06

    * bug fixes for plugin-based load_traj

Changes up to 1.00b05

    * support for trajectory input via VMD plugins
      [tested: XTC, TRR, TRJ; to test: GRO, G96, DCD]

    * fixed wildcard array overrun segfault

    * tuned VRML2 export

Changes up to 1.00b04

    * fixed cartoon_trace_atoms crash bug

    * fixed some horridly complicated rendering bugs with labels
    
    * fixed some cartoon drawing glitches
    
    * python blocks

    * fixed formal charges & valences on nucleic acid backbone

    * fixed race condition in color querying

Changes up to 1.00b03

    * near_to selection operator

    * surface_carve_normal_cutoff setting

Changes up to 1.00b02

    * MOL2 fixes

    * CVS->SVN migration

    * preliminary sequence alignment objects (incomplete)

    * UTF8 support with two new fonts having Greek symbols

Changes up to 1.00b01
